--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,9 @@ div {
   background-color: #E4F9F5;
   margin-top: 0;
 }
+
 h1 {
-  color: red;
+  color: blue;
   margin-top: 0;
   margin-bottom: 0;
 }
