--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,25 @@ body {
   margin: 0;
 }
 
-div {
+.top-container {
   background-color: #E4F9F5;
   margin-top: 0;
-}
+ 
+ }
+
+ .middle-container {
+  background-color: blueviolet;
+  height: 200px;
+  width: 200px;
+ }
+
+ .bottom-container {
+  background-color: red;
+  height: 200px;
+  width: 200px;
+ }
 
 h1 {
-  color: blue;
   margin-top: 0;
   margin-bottom: 0;
 }
