--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,19 @@
 body {
   margin: 0;
+  text-align: center;
+}
+
+h1 {
+  margin-top: 0;
+  
+  
 }
 
 .top-container {
   background-color: #E4F9F5;
   margin-top: 0;
+  position: relative;
+  padding-top: 100px;
  
  }
 
@@ -20,11 +29,19 @@ body {
   width: 200px;
  }
 
-h1 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
 .pro {
   text-decoration: underline;
 }
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
+  
+}
+
