--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,20 @@
 body {
   margin: 0;
   text-align: center;
+  font-family: "Merriweather", serif;
 }
 
 h1 {
   margin-top: 0;
-  
-  
+  font-family: "Sacramento", cursive;
+}
+
+h2 {
+  font-family: "Montserrat"; sans-serif;
+}
+
+h3 {
+  font-family: "Montserrat"; sans-serif;
 }
 
 .top-container {
@@ -42,6 +50,6 @@ h1 {
   position: absolute;
   left: 300px;
   bottom: 300px;
-  
+
 }
 
