--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,14 @@ body {
 }
 
 h1 {
-  margin-top: 0;
+  margin: 50px auto 0 auto;
   font-family: "Sacramento", cursive;
+  font-size: 5.625rem; 
 }
 
 h2 {
   font-family: "Montserrat"; sans-serif;
+  font-size: 2.5rem;
 }
 
 h3 {
@@ -26,15 +28,11 @@ h3 {
  }
 
  .middle-container {
-  background-color: red;
-  height: 200px;
-  width: 200px;
+  
  }
 
  .bottom-container {
-  background-color: blueviolet;
-  height: 200px;
-  width: 200px;
+  
  }
 
 .pro {
@@ -50,6 +48,22 @@ h3 {
   position: absolute;
   left: 300px;
   bottom: 300px;
+
+}
+
+.g-man {
+  width: 360px;
+  length: 480px;
+
+}
+
+.cakey-wakey {
+  width: 360px;
+  length: 480px;
+
+}
+
+.mackey {
 
 }
 
