--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body {
+  color: #40514E;
   margin: 0;
   text-align: center;
   font-family: "Merriweather", serif;
@@ -13,10 +14,11 @@ h1 {
 }
 
 h2 {
-  font-family: "Montserrat"; sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
   color: #66BFBF;
   font-weight: normal;
+  padding-bottom: 10px;
 }
 
 h3 {
@@ -26,7 +28,24 @@ h3 {
 
 a {
   color: #11999E;
+  font-family: "Montserrat", sans-serif;
+  margin: 20px;
+  text-decoration: none;
 }
+
+
+a:hover {
+  color: #eaf6f6;
+
+}
+
+hr {
+  border: dotted #EAF6f6 6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
+}
+
 
 .top-container {
   background-color: #E4F9F5;
@@ -37,12 +56,25 @@ a {
  }
 
  .middle-container {
+  margin: 100px 0;
   
  }
 
- .bottom-container {
-  
+ p {
+  line-height: 2;
  }
+
+ .intro {
+  width: 30%;
+  margin: auto; 
+ }
+
+ .bottom-container {
+  background-color: #66BFBF;
+  padding: 40px;
+ }
+
+ 
 
 .pro {
   text-decoration: underline;
@@ -51,28 +83,82 @@ a {
 .top-cloud {
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
 .bottom-cloud {
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
 
 }
 
 .g-man {
-  width: 360px;
-  length: 480px;
-
+  width: 25%;
 }
 
+button {
+  border-radius: 8;
+  
+}
 .cakey-wakey {
-  width: 360px;
-  length: 480px;
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+  
 
 }
 
 .mackey {
-
+  width: 25%;
+  float: right;
+  margin-left: 30px;
 }
+
+
+.skill-row {
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+}
+
+.copyright {
+  color: #EAF6f6;
+  padding: 20px 0;
+  font-size: .75rem;
+}
+
+
+.contact-message {
+  width: 40%;
+  margin: 40px auto 60px;
+}
+
+
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: "Montserrat", sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+
 
